# ffwrapped_be

./: Procfile  README.md  pyproject.toml
ffwrapped_be/: config.py  main.py
ffwrapped_be/app/: main.py
ffwrapped_be/app/data_models/: orm.py
ffwrapped_be/app/service/: best_lineup.py
ffwrapped_be/dash_app/: index.py  run.py
ffwrapped_be/dash_app/callbacks/: tab1_callbacks.py
ffwrapped_be/dash_app/components/: season_line_charts.py  season_waterfall.py  summary_cards.py  weekly_analysis_charts.py
ffwrapped_be/dash_app/layouts/: tab1_layout.py
ffwrapped_be/db/: databases.py
ffwrapped_be/db/migrations/: env.py
ffwrapped_be/db/migrations/versions/: 03823198a0c1_add_pfref_id_to_player_table.py  29df909e2352_add_fantasy_platform_tables.py  2a956fc2909d_add_fields_for_player_week_statistics.py  37ff950f46ad_index_on_playerplatform_ids_and_create_.py  3c33325a4dfb_re_create_player_week_espn_and_leauge_.py  42a179c6bbaf_rename_weeklystarter_to_.py  61c16241e9ed_update_columns_in_tables.py  639c1bee4462_updated_migration.py  81c2bd0725f5_change_column_in_weeklystarter_table.py  823540d93a0c_insert_espn_into_platform_table.py  8908adf37ee2_add_game_date_to_games_table.py  90eddff7a682_clean_up_databases.py  915fa6c34575_add_appropriate_uniqueness_constraints.py  (+12 more)
ffwrapped_be/etl/: utils.py
ffwrapped_be/etl/extractors/: espn_extractor.py  rapid_tank_extractor.py  team_extractor.py  weekly_extractor.py
ffwrapped_be/etl/services/: transform_load_espn.py  transform_load_games.py  transform_load_players.py  transform_load_rapid_players.py  transform_load_teams.py
