[tool.poetry]
name = "ffwrapped-be"
version = "0.1.0"
description = "Backend for fantasy football wrapped project"
authors = ["kevniu95 <kniu95@gmail.com>"]
readme = "README.md"
packages = [{ include = "ffwrapped_be" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
psycopg2 = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
sqlalchemy = ">=2.0.37,<3.0.0"
alembic = ">=1.14.0,<2.0.0"
beautifulsoup4 = ">=4.12.3,<5.0.0"
requests = ">=2.32.3,<3.0.0"
ratelimit = ">=2.2.1,<3.0.0"
mechanize = ">=0.4.10,<0.5.0"
espn-api = ">=0.44.1,<0.45.0"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
cachetools = ">=5.5.1,<6.0.0"
plotly = ">=6.0.0,<7.0.0"
pandas = ">=2.2.3,<3.0.0"
dash = ">=2.18.2,<3.0.0"
numpy = ">=2.2.3,<3.0.0"
dash-bootstrap-components = ">=1.4.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"